<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yesterday_text">Yesterday: </string>
    <string name="feels_like_text">Feels like: </string>
    <string name="humidity_text">Humidity: </string>
    <string name="percent">%</string>
    <string name="parameter_wind_speed"> m/s</string>
    <string name="wind_speed_text">Wind speed: </string>
    <string name="pressure_parameter"> mm</string>
    <string name="pressure_text">Pressure: </string>
    <string name="icon_condition_desc">Icon of weather condition</string>
</resources>