<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@drawable/afternoon_background"
    tools:context="ru.msokolov.weatherapp.now.NowFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.WeatherApp.ProgressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/localityDistrictTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.WeatherApp.Location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/small_space"
        tools:text="Tverskoy district"/>

    <TextView
        android:id="@+id/conditionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.WeatherApp.SubHeader.Bold"
        app:layout_constraintTop_toBottomOf="@id/localityDistrictTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/large_space"
        tools:text="Clear"/>

    <ImageView
        android:id="@+id/conditionImageView"
        android:layout_width="@dimen/large_icon_size"
        android:layout_height="@dimen/large_icon_size"
        android:layout_margin="@dimen/large_space"
        tools:src="@drawable/day_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conditionTextView"
        android:contentDescription="@string/icon_condition_desc" />

    <TextView
        android:id="@+id/degreeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.WeatherApp.MainHeader"
        app:layout_constraintTop_toBottomOf="@id/conditionImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/medium_space"
        tools:text="11"/>

    <LinearLayout
        android:id="@+id/feelsLikeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/degreeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/tiny_space"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/feelsLikeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:text="@string/feels_like_text"/>

        <TextView
            android:id="@+id/feelsLikeDegreeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/TextAppearance.WeatherApp.SubHeader.Bold"
            tools:text="17"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yesterdayDegreeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feelsLikeContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/medium_space"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yesterdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/TextAppearance.WeatherApp.UsualText.Medium"
            android:text="@string/yesterday_text"/>

        <TextView
            android:id="@+id/yesterdayDegreeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/TextAppearance.WeatherApp.UsualText.Bold"
            tools:text="9"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/extrasHumidityContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/yesterdayDegreeContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/large_space"
        android:layout_marginStart="@dimen/small_space"
        android:layout_marginEnd="@dimen/small_space"
        android:layout_marginBottom="@dimen/small_space"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/humidityImageView"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:src="@drawable/ic_humidity"
            android:contentDescription="@string/icon_condition_desc"/>

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_text"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/humidityValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="82"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/humidityPercentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/extrasWindContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/extrasHumidityContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/tiny_space"
        android:layout_marginStart="@dimen/small_space"
        android:layout_marginEnd="@dimen/small_space"
        android:layout_marginBottom="@dimen/small_space"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/windImageView"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:src="@drawable/ic_wind_speed"
            android:contentDescription="@string/icon_condition_desc"/>

        <TextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed_text"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/windSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2.4"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/windParameterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameter_wind_speed"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/extrasPressureContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/extrasWindContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/tiny_space"
        android:layout_marginStart="@dimen/small_space"
        android:layout_marginEnd="@dimen/small_space"
        android:layout_marginBottom="@dimen/small_space"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pressureImageView"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:src="@drawable/ic_pressure"
            android:contentDescription="@string/icon_condition_desc"/>

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_text"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/pressureValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="748"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/pressureParameterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_parameter"
            style="@style/TextAppearance.WeatherApp.SubHeader.Normal"
            android:layout_gravity="center"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>